--- a/src/App.styles.scss
+++ b/src/App.styles.scss
@@ -4,8 +4,11 @@
 
 	// background: $color-base;
 	display: flex;
+	// flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	font-family: 'Avenir';
+	font-family: 'Poppins', sans-serif;
+	color: white;
+	background-color: inherit
 	
 }
