--- a/src/App.styles.scss
+++ b/src/App.styles.scss
@@ -1,11 +1,11 @@
 .App {
 	width: 100%;
-	min-height: 100vh;
+	// min-height: 100vh;
 
 	// background: $color-base;
 	display: flex;
 	// flex-direction: column;
-	align-items: center;
+	// align-items: center;
 	justify-content: center;
 	font-family: 'Poppins', sans-serif;
 	color: white;
