--- a/src/components/profile-card/profile-card.styles.scss
+++ b/src/components/profile-card/profile-card.styles.scss
@@ -33,12 +33,29 @@
 		margin-top: .9rem;
 
 		&:hover {
-	  	background: #1D9BF0;
+			background: #1D9BF0;
 			fill:  #FF4135;
 			cursor: pointer;
 		}
-
 	}	
+
+	// .active {
+	// 		position: absolute;
+
+	// 		width: 3.5rem;
+	// 		height: 3.5rem;
+	// 		background: #BBBBBB;
+	// 		border-radius: 1rem;
+	// 		display: flex;
+	// 		align-items: center;
+	// 		justify-content: center;
+
+	// 		margin-right: .8rem;
+	// 		margin-top: .9rem;
+	//   	background: #1D9BF0;
+	// 		fill:  #FF4135;
+	// 		cursor: pointer;
+	// }
 
 	&-icon {
 		width: 1.5rem;
