--- a/src/App.styles.scss
+++ b/src/App.styles.scss
@@ -1,11 +1,13 @@
+$bp-medium: 50em; //// == 800px
+
+
 .App {
 	width: 100%;
-	// min-height: 100vh;
-
-	// background: $color-base;
 	display: flex;
-	// flex-direction: column;
-	// align-items: center;
+	
+	@media only screen and(max-width: $bp-medium) {
+		flex-direction: column;
+	}
 	justify-content: center;
 	font-family: 'Poppins', sans-serif;
 	color: white;
