--- a/src/components/developers/developers.styles.scss
+++ b/src/components/developers/developers.styles.scss
@@ -4,10 +4,10 @@
 	margin-top: 5rem;
 
 	font-family: 'Poppins';
-	font-style: normal;
+	font-style: italic;
 	font-weight: 700;
-	font-size: 32px;
-	line-height: 34px;
+	font-size: 2rem;
+	line-height: 3rem;
 
 	letter-spacing: 1px;
 
