--- a/src/index.styles.scss
+++ b/src/index.styles.scss
@@ -1,4 +1,10 @@
 $color-base: #E5E5E5;
+$bp-largest: 75em;  //// == 1200px
+$bp-large: 62.5em;  //// == 1000px
+$bp-medium: 56.25em; //// == 900px
+$bp-small: 37.5em;  //// == 600px
+$bp-smaller: 31.25em; // == 500px;
+$bp-smallest: 21.875em; // == 350px;
 
 
 *,
@@ -15,6 +21,10 @@ $color-base: #E5E5E5;
 html {
 	font-size: 62.5%;
 	box-sizing: border-box;
+
+	@media only screen and(max-width: $bp-largest) {
+		font-size: 50%;
+	}
 }
 
 
